Fixing overlap

--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -31,7 +31,6 @@ body.with-header {
 .banner-container {
 	width: 100%;
 	position: fixed;
-	top: 120px;
 	height: 300px;
 	z-index: -10;
 	overflow: hidden;
@@ -62,7 +61,6 @@ body.with-header {
         background-color: #e1dfdb;
         padding: 2rem;
 	overflow: hidden;
-	margin-top: 300px;
 }
 
 .bottom-section {
